# bible-memory

./: .air.toml  .env  .gitignore  Cargo.toml  Makefile  README.md  delete_passage.go  get_create_passage.go  get_index.go  get_login.go  get_passage_edit.go  get_passages.go  get_profile.go  get_register.go  get_review.go  go.mod  go.sum  index.go  index_routes.go  main.go  next.config.js  package-lock.json  package.json  passage.go  passages_routes.go  post_create_passage.go  post_login.go  post_logout.go  post_register.go  post_review.go  put_edit_passage.go  put_profile.go  register.go  session.go  tailwind.config.js  user_routes.go
assets/: common.css  manifest.json  reset.css  tailwind.css  typer.css  typer.js
components/: PassageForm.tsx  VerseTyper.module.css  VerseTyper.tsx
db/: passage_repo.go  user_repo.go
domain_model/: UserEmail.go  UserName.go  error.go  passage.go  passage_reference.go  passage_review.go  review_grade.go  review_interval.go  review_timestamp.go  shared.go  user.go
fsrs/: main.go
migrations/: 20240108002636_init.down.sql  20240108002636_init.up.sql
pages/: _app.tsx  index.tsx  passages.tsx
public/: manifest.json  sw.js.map
services/: errors.go  passages.go  users.go
src/: index.html  main.rs  passage.rs  routes.rs  sw.js
styles/: Home.module.css
templates/: add_passage.html  add_passage_partial.html  edit_passage.html  edit_passage_partial.html  error.html  flash.html  get_review.html  index.html  layout.html  login.html  new-passage.html  not-found.html  passage_list_partial.html  passages.html  profile.html  review.html  (+4 more)
(+98 files in other folders)
